Gantt Layout changes EVOPLAN20-212. EVOPLAN20-213 - Fixed. EVOPLAN20-117 - Showing shift

--- a/webapp/assets/css/style.css
+++ b/webapp/assets/css/style.css
@@ -107,8 +107,15 @@ div.worktimeAvailability > .workTimeAvailabilityText {
 .workTimeTextBlack{
 	color:#000000;
 }
+/* Gantt custom Css */
 
 .sapGanttChartSelection .sapGanttSelectedPath{
     stroke-width: 0 !important;
     stroke: transparent !important;
 }
+
+div.resourceGanttWithTable .sapGanttBackground .sapGanttBackgroundSVG{
+    background: #ccc !important;
+}
+
+
